# nba-analytics-copilot

./: .gitignore  README.md  eval.py  main.py  pyproject.toml
.claude/: CLAUDE.md
data/: player_stats_2016.csv
db/: __init__.py
src/: __init__.py  config.py  db.py
src/agent/: __init__.py  nba_agent.py  tools.py
src/graph/: __init__.py  builder.py  nodes.py  state.py  tools.py
src/pipeline/: __init__.py  embeddings.py  features.py  ingestion.py  summaries.py
src/retrieval/: __init__.py  semantic.py
tests/: test_graph.py  test_tools.py
