[project]
name = "nba-analytics-copilot"
version = "0.2.0"
description = "AI-powered NBA analytics agent using RAG and local LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "sentence-transformers>=5.2.0",
    "httpx>=0.27.0",
    "langgraph>=1.0.8",
    "langchain-core>=1.2.9",
    "langchain-ollama>=1.0.1",
]

[project.optional-dependencies]
huggingface = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[project.scripts]
nba-copilot = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
